--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "reposisaurus",
   "version": "0.1.0",
-  "private": true,
+  "author": {
+    "name": "Josh Levy"
+  },
+  "repository": {
+    "url": "https://github.com/JoshAaronLevy/Reposisaurus"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "initiate": "npm install && npm run test && npm run build && npm start"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -14,17 +25,14 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^7.0.1"
   },
   "browserslist": {
     "production": [
@@ -37,8 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^7.0.1"
   }
 }
