--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "primeflex": "^3.1.3",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
