--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "reposisaurus",
+  "name": "repo-runner",
   "version": "0.1.0",
   "author": {
     "name": "Josh Levy"
   },
   "repository": {
-    "url": "https://github.com/JoshAaronLevy/Reposisaurus"
+    "url": "https://github.com/JoshAaronLevy/repo-runner"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,6 +18,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "fuzzysort": "^1.2.1",
     "primeflex": "^3.1.3",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
