--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "fuzzysort": "^1.2.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "primeflex": "^3.1.3",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
