--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "miragejs": "^0.1.43",
+    "msw": "^0.38.1",
     "node-sass": "^7.0.1"
   },
   "browserslist": {
