--- a/package.json
+++ b/package.json
@@ -14,18 +14,10 @@
     "initiate": "npm install && npm run test && npm run build && npm start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-pro": "^6.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/pro-duotone-svg-icons": "^6.0.0",
-    "@fortawesome/pro-light-svg-icons": "^6.0.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.0.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "fuzzysort": "^1.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
@@ -38,8 +30,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
-    "redux": "^4.1.2",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.1.2"
   },
   "eslintConfig": {
     "extends": [
