--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "CI=true npm test -- --env=jsdom --coverage",
+    "e2e": "cypress open",
     "initiate": "npm install && npm run test && npm run build && npm start"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "cypress-react-selector": "^2.3.16",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
@@ -36,10 +37,24 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "testing-library/no-manual-cleanup": "warn"
+    }
   },
   "devDependencies": {
+    "@cypress/react": "^5.12.4",
+    "@cypress/webpack-dev-server": "^1.8.2",
+    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^14.0.0-beta",
+    "cypress": "^9.5.1",
+    "eslint-plugin-testing-library": "^5.0.6",
+    "jest-watch-typeahead": "^0.6.5",
     "miragejs": "^0.1.43",
+    "msw": "^0.38.2",
     "node-sass": "^7.0.1"
   },
   "browserslist": {
