--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primeflex": "^3.1.3",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
