--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deploy": "rm -rf build && npm run build && firebase deploy && gitquick 'Deployed to Firebase'"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.0",
     "cypress-react-selector": "^2.3.16",
@@ -29,6 +30,8 @@
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.3",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
