--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "concurrently \"nodemon server/index.js\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "CI=true npm test --env=jsdom --coverage",
@@ -21,7 +22,11 @@
     "@auth0/auth0-react": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.2",
     "axios": "^0.26.0",
+    "concurrently": "^7.0.0",
     "cypress-react-selector": "^2.3.16",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
